backport to java17 after cherry-picking