@@ -69,7 +69,7 @@ public class TypeLSMTreeIndexTest extends TestHelper {
 
         total++;
         assertThat(results).hasSize(1);
-        assertThat((int) results.getFirst()).isEqualTo(i);
+        assertThat((int) results.get(0)).isEqualTo(i);
       }
 
       assertThat(total).isEqualTo(TOT);
@@ -608,7 +608,7 @@ public class TypeLSMTreeIndexTest extends TestHelper {
                 if (threadInserted % 1000 == 0)
                   LogManager.instance()
                       .log(this, Level.FINE, "%s Thread %d inserted %d records with key %d (total=%d)", null, getClass(),
-                          Thread.currentThread().threadId(), i1, threadInserted, crossThreadsInserted.get());
+                          Thread.currentThread().getId(), i1, threadInserted, crossThreadsInserted.get());
 
                 keyPresent = true;
 
@@ -622,7 +622,7 @@ public class TypeLSMTreeIndexTest extends TestHelper {
                 assertThat(database.isTransactionActive()).isFalse();
               } catch (final Exception e) {
                 LogManager.instance()
-                    .log(this, Level.SEVERE, "%s Thread %d Generic Exception", e, getClass(), Thread.currentThread().threadId());
+                    .log(this, Level.SEVERE, "%s Thread %d Generic Exception", e, getClass(), Thread.currentThread().getId());
                 assertThat(database.isTransactionActive()).isFalse();
                 return;
               }
@@ -631,16 +631,16 @@ public class TypeLSMTreeIndexTest extends TestHelper {
             if (!keyPresent)
               LogManager.instance()
                   .log(this, Level.WARNING, "%s Thread %d Cannot create key %d after %d retries! (total=%d)", null, getClass(),
-                      Thread.currentThread().threadId(), i1, maxRetries, crossThreadsInserted.get());
+                      Thread.currentThread().getId(), i1, maxRetries, crossThreadsInserted.get());
 
           }
 
           LogManager.instance()
-              .log(this, Level.FINE, "%s Thread %d completed (inserted=%d)", null, getClass(), Thread.currentThread().threadId(),
+              .log(this, Level.FINE, "%s Thread %d completed (inserted=%d)", null, getClass(), Thread.currentThread().getId(),
                   threadInserted);
 
         } catch (final Exception e) {
-          LogManager.instance().log(this, Level.SEVERE, "%s Thread %d Error", e, getClass(), Thread.currentThread().threadId());
+          LogManager.instance().log(this, Level.SEVERE, "%s Thread %d Error", e, getClass(), Thread.currentThread().getId());
         }
       });
     }
